# stocksense-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INTERVIEW_PREP.md  Makefile  README.md  check_types.py  docker-compose.yml  pyproject.toml  requirements.txt  test.onnx.data  test_q.py  test_qconfig.py
configs/: config.yaml
dashboard/: app.py
scripts/: evaluate.py  finetune_llm.py  optimize.py  train.py
src/: __init__.py
src/api/: __init__.py  main.py  middleware.py  schemas.py
src/mlops/: __init__.py  ab_testing.py  experiment_tracker.py  model_registry.py
src/nlp/: __init__.py  entity_extractor.py  llm_rag_chain.py  sentiment_analyzer.py
src/optimization/: __init__.py  benchmark.py  onnx_exporter.py  quantizer.py
src/utils/: __init__.py  logger.py  metrics.py
tests/: test_ab_testing.py  test_api.py  test_data_pipeline.py  test_models.py  test_nlp.py  test_optimization.py
